Fixes spacing issues with contact.html

--- a/contact/styles/contact.css
+++ b/contact/styles/contact.css
@@ -93,7 +93,7 @@
     width: 3rem;
     aspect-ratio: 1/1;
     background-color: white;
-
+    background-repeat: no-repeat;
     
 }
 
@@ -114,10 +114,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    
     width: 80%;
 }
-
+#email-info{
+    justify-content: center;
+}
 #link-row{
     justify-content: space-around;
 }
@@ -183,12 +184,13 @@ section{
 
 .degree{
     width: 100%;
+    height: 100%;
     border: 1px solid black;
+    
+    display: flex;
 }
 .degree img{
     width: 100%;
-    height: 100%;
-    object-fit: contain;
 }
 /* #back-btn {
     background-color: tan;
